<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="32dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="212dp"
        android:layout_height="137dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/cine_explorer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/register_hint"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registerImageView"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/registerLabel"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/last_name_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/birthday_picker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/birthday_hint"
        android:inputType="none"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/birthday_picker"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_register_email"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/register_hint"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/et_register_password" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hint"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>