<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="32dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="366dp"
        android:src="@drawable/cine_explorer_complete_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/login_hint"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_hint"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
