<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context="fragments.AccountFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="32dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"
        android:orientation="vertical" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/userImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/default_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="50dp"
        app:riv_corner_radius="125dp"
        app:riv_border_width="2dp"
        app:riv_border_color="@color/white"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/nameLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userImageView"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="30dp"
        android:text="@string/name_hint"
        />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameLabelTV"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/emailLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTV"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="30dp"
        android:text="@string/email_hint"
        />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailLabelTV"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/birthdayLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="30dp"
        android:text="@string/birthday_hint"
        />

    <TextView
        android:id="@+id/birthdayTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/birthdayLabelTV"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/logout_hint"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/birthdayTV" />


</androidx.constraintlayout.widget.ConstraintLayout>