<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.fragments.MovieDetailFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Movie Details"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detailToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="32dp"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="32dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/titleDetailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/detailMovieImageView"
                android:layout_height="266dp"
                android:layout_width="0dp"
                android:src="@drawable/cine_explorer_complete_logo"
                app:layout_constraintTop_toBottomOf="@id/titleDetailTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/detailOverviewLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/overview_hint"
                app:layout_constraintTop_toBottomOf="@id/detailMovieImageView"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/detailOverviewTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nodata_hint"
                app:layout_constraintTop_toBottomOf="@id/detailOverviewLabelTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/detailDateLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/date_hint"
                app:layout_constraintTop_toBottomOf="@id/detailOverviewTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/detailAdultLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/adults_hint"
                app:layout_constraintTop_toBottomOf="@id/detailOverviewTV"
                app:layout_constraintStart_toEndOf="@id/detailDateLabelTV"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50dp"/>


            <TextView
                android:id="@+id/detailDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nodata_hint"
                app:layout_constraintTop_toBottomOf="@id/detailDateLabelTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/detailAdultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nodata_hint"
                app:layout_constraintTop_toBottomOf="@+id/detailAdultLabelTV"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@id/detailDateTV"
                android:layout_marginTop="10dp"
                android:layout_marginStart="80dp"/>


            <TextView
                android:id="@+id/detailLanguageLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/language_hint"
                app:layout_constraintTop_toBottomOf="@id/detailDateTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/detailLanguageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nodata_hint"
                app:layout_constraintTop_toBottomOf="@id/detailLanguageLabelTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/detailRatingLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/rating_hint"
                app:layout_constraintTop_toBottomOf="@id/detailLanguageTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/ratingStartIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yellow_star"
                app:layout_constraintTop_toBottomOf="@+id/detailRatingLabelTV"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp" />

            <TextView
                android:id="@+id/detailRatingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nodata_hint"
                app:layout_constraintTop_toBottomOf="@+id/detailRatingLabelTV"
                app:layout_constraintStart_toEndOf="@+id/ratingStartIV"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
